Bug 708373: Record clip/layer nesting more efficiently.

The file in question uses multiple (1000+!) nested clip regions.
This was running us off the fixed size array. We now store a
count of clips at each level rather than 1 per level to avoid
this.